--- a/Device Interface Manager/MVVM/View/OutputCreatorView.xaml
+++ b/Device Interface Manager/MVVM/View/OutputCreatorView.xaml
@@ -160,7 +160,9 @@
                 <TextBlock Grid.Row="1" Text="Value" Foreground="White" VerticalAlignment="Center"/>
                 <TextBox
                     Grid.Column="1"
-                    Text="{Binding ComparisonValue, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}">
+                    Text="{Binding ComparisonValue, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
+                    mah:TextBoxHelper.Watermark="Value to check"
+                    mah:TextBoxHelper.ClearTextButton="True">
                 </TextBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
@@ -183,7 +185,8 @@
                 <TextBox 
                     Grid.Column="1"
                     Text="{Binding Data, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
-                    mah:TextBoxHelper.Watermark="MSFS/SimConnect/LVar">
+                    mah:TextBoxHelper.Watermark="MSFS/SimConnect/LVar"
+                    mah:TextBoxHelper.ClearTextButton="True">
                 </TextBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
