--- a/Device Interface Manager/MVVM/View/MainWindow.xaml
+++ b/Device Interface Manager/MVVM/View/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window
+﻿<mah:MetroWindow
     x:Class="Device_Interface_Manager.MVVM.View.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -11,14 +11,15 @@
     Title="Device Interface Manager"
     Height="600"
     Width="920"
-    WindowStyle="None"
     MinHeight="635"
     MinWidth="1240"
     MaxHeight="{x:Static SystemParameters.MaximizedPrimaryScreenHeight}"
+    SaveWindowPosition="True"
+    WindowStyle="None"
+    UseNoneWindowStyle="True"
     Background="Transparent"
-    AllowsTransparency="True"
-    Closing="OnWindowClosing"
-    Initialized="Window_Initialized">
+    BorderThickness="0"
+    AllowsTransparency="True">
 
     <WindowChrome.WindowChrome>
         <WindowChrome ResizeBorderThickness="5" CaptionHeight="0"/>
@@ -62,7 +63,6 @@
             <i:InvokeCommandAction Command="{Binding WindowClosingCommand}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
-
 
     <Border
         Background="#FF151515"
@@ -473,4 +473,4 @@
             </Grid>
         </Grid>
     </Border>
-</Window>
+</mah:MetroWindow>
