--- a/Device Interface Manager/MVVM/View/OutputCreatorView.xaml
+++ b/Device Interface Manager/MVVM/View/OutputCreatorView.xaml
@@ -10,6 +10,7 @@
     xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     d:DataContext="{d:DesignInstance Type=viewmodel:OutputCreatorViewModel}"
+    WindowStartupLocation="CenterOwner"
     mc:Ignorable="d"
     Background="#1B1A24"
     Title="OutputCreator"
@@ -145,7 +146,7 @@
                                 <Setter Property="Visibility" Value="Visible"/>
                             </DataTrigger>
                             <DataTrigger Binding="{Binding PMDGStructArrayNum}" Value="{x:Null}">
-                                <Setter Property="Visibility" Value="Collapsed"/>
+                                <Setter Property="Visibility" Value="Hidden"/>
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
@@ -166,7 +167,7 @@
                 </TextBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
-                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Setter Property="Visibility" Value="Hidden"/>
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsComparisonValueEnabled}" Value="True">
                                 <Setter Property="Visibility" Value="Visible"/>
