--- a/Device Interface Manager/MVVM/View/InputCreatorView.xaml
+++ b/Device Interface Manager/MVVM/View/InputCreatorView.xaml
@@ -13,33 +13,32 @@
     WindowStartupLocation="CenterOwner"
     mc:Ignorable="d"
     Background="#1B1A24"
-    Title="InputCreator"
-    Height="600"
-    Width="800">
+    Title="Input Creator"
+    TitleAlignment="Center"
+    TitleCharacterCasing="Normal"
+    SizeToContent="WidthAndHeight"
+    ResizeMode="NoResize">
 
     <mah:MetroWindow.Resources>
         <core:StringToBooleanConverter x:Key="StringToBooleanConverter"/>
     </mah:MetroWindow.Resources>
 
-    <Grid>
+    <Grid Margin="50">
 
         <StackPanel HorizontalAlignment="Center" Width="400">
 
-            <StackPanel  Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,25,0,0">
+            <StackPanel  Orientation="Horizontal" HorizontalAlignment="Center">
                 <RadioButton Content="MSFS/SimConnect/LVar"
                              Background="Transparent"
-                             Cursor="Hand"
-                             IsChecked="{Binding Path=SelectedEventType, Mode=TwoWay, Converter={StaticResource StringToBooleanConverter}, ConverterParameter={x:Static model:ProfileCreatorModel.MSFSSimConnect}}"/>
+                             IsChecked="{Binding Path=EventType, Mode=TwoWay, Converter={StaticResource StringToBooleanConverter}, ConverterParameter={x:Static model:ProfileCreatorModel.MSFSSimConnect}}"/>
                 <RadioButton Content="RPN/H-Events"
                              Background="Transparent"
                              Margin="25,0,0,0"
-                             Cursor="Hand"
-                             IsChecked="{Binding Path=SelectedEventType, Mode=TwoWay, Converter={StaticResource StringToBooleanConverter}, ConverterParameter={x:Static model:ProfileCreatorModel.RPN}}"/>
+                             IsChecked="{Binding Path=EventType, Mode=TwoWay, Converter={StaticResource StringToBooleanConverter}, ConverterParameter={x:Static model:ProfileCreatorModel.RPN}}"/>
                 <RadioButton Content="PMDG737"
                              Background="Transparent"
                              Margin="25,0,0,0"
-                             Cursor="Hand"
-                             IsChecked="{Binding Path=SelectedEventType, Mode=TwoWay, Converter={StaticResource StringToBooleanConverter}, ConverterParameter={x:Static model:ProfileCreatorModel.PMDG737}}"/>
+                             IsChecked="{Binding Path=EventType, Mode=TwoWay, Converter={StaticResource StringToBooleanConverter}, ConverterParameter={x:Static model:ProfileCreatorModel.PMDG737}}"/>
             </StackPanel>
 
 
@@ -53,8 +52,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="1" Text="Switches" Foreground="White" VerticalAlignment="Center"/>
-                <TextBlock Grid.Column="2" d:Text="TEST" Foreground="White" Margin="0,0,0,5" Text="{Binding SelectedSwitch}" HorizontalAlignment="Center"/>
+                <TextBlock Grid.Row="1" Text="Input" Foreground="White" VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="2" d:Text="TEST" Foreground="White" Margin="0,0,0,5" Text="{Binding Input}" HorizontalAlignment="Center"/>
                 <Button
                     Grid.Row="1"
                     Grid.Column="1"
@@ -67,7 +66,7 @@
                     Grid.Column="2"
                     mah:TextBoxHelper.ClearTextButton="True"
                     ItemsSource="{Binding Switches}"
-                    SelectedItem="{Binding SelectedSwitch, UpdateSourceTrigger=PropertyChanged}">
+                    SelectedItem="{Binding Input, UpdateSourceTrigger=PropertyChanged}">
                     <i:Interaction.Triggers>
                         <i:EventTrigger EventName="SelectionChanged">
                             <i:InvokeCommandAction Command="{Binding SwitchComboBoxSlectionChangedCommand}" PassEventArgsToCommand="True"/>
@@ -94,7 +93,7 @@
                     IsTextSearchEnabled="False"
                     mah:TextBoxHelper.Watermark="Search..."
                     mah:TextBoxHelper.ClearTextButton="True"
-                    Text="{Binding SearchPMDGEventsText, UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding SearchPMDGEvent, UpdateSourceTrigger=PropertyChanged}"
                     SelectedItem="{Binding PMDGEvent, UpdateSourceTrigger=PropertyChanged}"
                     ItemsSource="{Binding PMDGEvents}"
                     VirtualizingPanel.IsVirtualizing="True">
@@ -116,7 +115,7 @@
                     <Style TargetType="Grid">
                         <Setter Property="Visibility" Value="Collapsed"/>
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding SelectedEventType}" Value="PMDG737">
+                            <DataTrigger Binding="{Binding EventType}" Value="PMDG737">
                                 <Setter Property="Visibility" Value="Visible"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -140,10 +139,10 @@
                     <Style TargetType="Grid">
                         <Setter Property="Visibility" Value="Collapsed"/>
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding SelectedEventType}" Value="MSFS/SimConnect/LVar">
+                            <DataTrigger Binding="{Binding EventType}" Value="MSFS/SimConnect/LVar">
                                 <Setter Property="Visibility" Value="Visible"/>
                             </DataTrigger>
-                            <DataTrigger Binding="{Binding SelectedEventType}" Value="RPN/H-Events">
+                            <DataTrigger Binding="{Binding EventType}" Value="RPN/H-Events">
                                 <Setter Property="Visibility" Value="Visible"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -160,8 +159,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="1" Text="Mouse Event Press" Foreground="White" VerticalAlignment="Center"/>
-                <TextBlock Grid.Column="1" d:Text="TEST" Foreground="White" Margin="0,0,0,5" Text="{Binding PMDGMouseEventPress.Key}" HorizontalAlignment="Center"/>
+                <TextBlock Grid.Row="1" Text="Mouse Press" Foreground="White" VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="1" d:Text="TEST" Foreground="White" Margin="0,0,0,5" Text="{Binding PMDGMousePress.Key}" HorizontalAlignment="Center"/>
                 <ComboBox
                     Grid.Row="1"
                     Grid.Column="1"
@@ -170,9 +169,9 @@
                     DisplayMemberPath="Key"
                     mah:TextBoxHelper.Watermark="Search..."
                     mah:TextBoxHelper.ClearTextButton="True"
-                    Text="{Binding SearchPMDGMouseEventsTextPress, UpdateSourceTrigger=PropertyChanged}"
-                    SelectedItem="{Binding PMDGMouseEventPress, UpdateSourceTrigger=PropertyChanged}"
-                    ItemsSource="{Binding PMDGMouseEventsPress}"
+                    Text="{Binding SearchPMDGMousePress, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedItem="{Binding PMDGMousePress, UpdateSourceTrigger=PropertyChanged}"
+                    ItemsSource="{Binding PMDGMousePressArray}"
                     VirtualizingPanel.IsVirtualizing="True">
                     <ComboBox.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -190,17 +189,15 @@
                 </ComboBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
-                        <Setter Property="Visibility" Value="Hidden"/>
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Setter Property="IsEnabled" Value="False"/>
                         <Style.Triggers>
-                            <MultiDataTrigger>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding SelectedEventType}" Value="PMDG737"/>
-                                    <Condition Binding="{Binding EventDataPress}" Value="{x:Null}"/>
-                                </MultiDataTrigger.Conditions>
-                                <MultiDataTrigger.Setters>
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </MultiDataTrigger.Setters>
-                            </MultiDataTrigger>
+                            <DataTrigger Binding="{Binding EventType}" Value="PMDG737">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding DataPress}" Value="{x:Null}">
+                                <Setter Property="IsEnabled" Value="True"/>
+                            </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Grid.Style>
@@ -211,21 +208,21 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="1" Text="Event Data Press" Foreground="White" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="1" Text="Data Press" Foreground="White" VerticalAlignment="Center"/>
                 <TextBox 
                     Grid.Column="1"
-                    Text="{Binding EventDataPress, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding DataPress, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
                     mah:TextBoxHelper.Watermark="Number..."
                     mah:TextBoxHelper.ClearTextButton="True">
                 </TextBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
-                        <Setter Property="Visibility" Value="Hidden"/>
+                        <Setter Property="IsEnabled" Value="False"/>
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding PMDGMouseEventPress}" Value="{x:Null}">
-                                <Setter Property="Visibility" Value="Visible"/>
+                            <DataTrigger Binding="{Binding PMDGMousePress}" Value="{x:Null}">
+                                <Setter Property="IsEnabled" Value="True"/>
                             </DataTrigger>
-                            <DataTrigger Binding="{Binding SelectedEventType}" Value="RPN/H-Events">
+                            <DataTrigger Binding="{Binding EventType}" Value="RPN/H-Events">
                                 <Setter Property="Visibility" Value="Collapsed"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -242,8 +239,8 @@
                     <RowDefinition Height="*"/>
                     <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <TextBlock Grid.Row="1" Text="Mouse Event Release" Foreground="White" VerticalAlignment="Center"/>
-                <TextBlock Grid.Column="1" d:Text="TEST" Foreground="White" Margin="0,0,0,5" Text="{Binding PMDGMouseEventRelease.Key}" HorizontalAlignment="Center"/>
+                <TextBlock Grid.Row="1" Text="Mouse Release" Foreground="White" VerticalAlignment="Center"/>
+                <TextBlock Grid.Column="1" d:Text="TEST" Foreground="White" Margin="0,0,0,5" Text="{Binding PMDGMouseRelease.Key}" HorizontalAlignment="Center"/>
                 <ComboBox
                     Grid.Row="1"
                     Grid.Column="1"
@@ -252,9 +249,9 @@
                     DisplayMemberPath="Key"
                     mah:TextBoxHelper.Watermark="Search..."
                     mah:TextBoxHelper.ClearTextButton="True"
-                    Text="{Binding SearchPMDGMouseEventsTextRelease, UpdateSourceTrigger=PropertyChanged}"
-                    SelectedItem="{Binding PMDGMouseEventRelease, UpdateSourceTrigger=PropertyChanged}"
-                    ItemsSource="{Binding PMDGMouseEventsRelease}"
+                    Text="{Binding SearchPMDGMouseRelease, UpdateSourceTrigger=PropertyChanged}"
+                    SelectedItem="{Binding PMDGMouseRelease, UpdateSourceTrigger=PropertyChanged}"
+                    ItemsSource="{Binding PMDGMouseReleaseArray}"
                     VirtualizingPanel.IsVirtualizing="True">
                     <ComboBox.ItemsPanel>
                         <ItemsPanelTemplate>
@@ -272,17 +269,15 @@
                 </ComboBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
-                        <Setter Property="Visibility" Value="Hidden"/>
+                        <Setter Property="Visibility" Value="Collapsed"/>
+                        <Setter Property="IsEnabled" Value="False"/>
                         <Style.Triggers>
-                            <MultiDataTrigger>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding SelectedEventType}" Value="PMDG737"/>
-                                    <Condition Binding="{Binding EventDataRelease}" Value="{x:Null}"/>
-                                </MultiDataTrigger.Conditions>
-                                <MultiDataTrigger.Setters>
-                                    <Setter Property="Visibility" Value="Visible"/>
-                                </MultiDataTrigger.Setters>
-                            </MultiDataTrigger>
+                            <DataTrigger Binding="{Binding EventType}" Value="PMDG737">
+                                <Setter Property="Visibility" Value="Visible"/>
+                            </DataTrigger>
+                            <DataTrigger Binding="{Binding DataRelease}" Value="{x:Null}">
+                                <Setter Property="IsEnabled" Value="True"/>
+                            </DataTrigger>
                         </Style.Triggers>
                     </Style>
                 </Grid.Style>
@@ -293,21 +288,21 @@
                     <ColumnDefinition Width="*"/>
                     <ColumnDefinition Width="2*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Grid.Row="1" Text="Event Data Release" Foreground="White" VerticalAlignment="Center"/>
+                <TextBlock Grid.Row="1" Text="Data Release" Foreground="White" VerticalAlignment="Center"/>
                 <TextBox
                     Grid.Column="1"
-                    Text="{Binding EventDataRelease, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
+                    Text="{Binding DataRelease, TargetNullValue='', UpdateSourceTrigger=PropertyChanged}"
                     mah:TextBoxHelper.Watermark="Number..."
                     mah:TextBoxHelper.ClearTextButton="True">
                 </TextBox>
                 <Grid.Style>
                     <Style TargetType="Grid">
-                        <Setter Property="Visibility" Value="Hidden"/>
+                        <Setter Property="IsEnabled" Value="False"/>
                         <Style.Triggers>
-                            <DataTrigger Binding="{Binding PMDGMouseEventRelease}" Value="{x:Null}">
-                                <Setter Property="Visibility" Value="Visible"/>
+                            <DataTrigger Binding="{Binding PMDGMouseRelease}" Value="{x:Null}">
+                                <Setter Property="IsEnabled" Value="True"/>
                             </DataTrigger>
-                            <DataTrigger Binding="{Binding SelectedEventType}" Value="RPN/H-Events">
+                            <DataTrigger Binding="{Binding EventType}" Value="RPN/H-Events">
                                 <Setter Property="Visibility" Value="Collapsed"/>
                             </DataTrigger>
                         </Style.Triggers>
@@ -315,9 +310,9 @@
                 </Grid.Style>
             </Grid>
 
-        </StackPanel>
+            <Button Content="OK" Command="{Binding OkCommand}" Margin="0,30,0,0" Width="100" Cursor="Hand"/>
 
-        <Button Content="OK" Command="{Binding OkCommand}" Margin="0,0,0,25" Width="100" VerticalAlignment="Bottom" Cursor="Hand"/>
+        </StackPanel>
 
     </Grid>
 </mah:MetroWindow>
